refactor items hierarchy