@@ -14,73 +14,59 @@ import java.util.function.Predicate;
 
 public enum BandageTypes implements BandageType {
 
-	EMPTY(20, Collections.singletonList(Effects.BLEEDING.getHolder().orElseThrow())),
+    EMPTY("empty_band", 20, Collections.singletonList(Effects.BLEEDING.getHolder().orElseThrow())),
 
-	SMALL(40, true, BandageTypes::isNotFullHealth,
-			livingEntity -> livingEntity.addEffect(new MobEffectInstance(MobEffects.REGENERATION, 100, 0)),
-			Collections.singletonList(Effects.BLEEDING.getHolder().orElseThrow())),
+    HEMOSTATIC("hemostatic_band", 40, BandageTypes::handleHardBleeding,
+            Collections.singletonList(Effects.HARD_BLEEDING.getHolder().orElseThrow())),
 
-	MEDIUM(70, true, BandageTypes::isNotFullHealth,
-			livingEntity -> livingEntity.addEffect(new MobEffectInstance(MobEffects.REGENERATION, 100, 1)),
-			Collections.singletonList(Effects.BLEEDING.getHolder().orElseThrow())),
+    ANTI_BIOTIC("antibiotic_band", 50, List.of(MobEffects.POISON)),
 
-	LARGE(100, true, BandageTypes::isNotFullHealth,
-			livingEntity -> livingEntity.addEffect(new MobEffectInstance(MobEffects.REGENERATION, 100, 2)),
-			Collections.singletonList(Effects.BLEEDING.getHolder().orElseThrow())),
+    MAGIC("magic_band", 50, List.of(MobEffects.WITHER)),
 
-	HEMOSTATIC(40, BandageTypes::handleHardBleeding, Collections.singletonList(Effects.HARD_BLEEDING
-			.getHolder().orElseThrow())),
-
-    ANTI_BIOTIC(50, List.of(MobEffects.POISON)),
-
-    MAGIC(50, List.of(MobEffects.WITHER)),
-
-	STIMULANT(50, List.of(MobEffects.MINING_FATIGUE, MobEffects.SLOWNESS)),
+    STIMULANT("stimulant_band", 50, List.of(MobEffects.MINING_FATIGUE, MobEffects.SLOWNESS)),
 
     ;
 
-	public static final List<BandageType> HEALING_BANDAGE_TYPES = List.of(SMALL, MEDIUM, LARGE);
-
     private static void handleHardBleeding(LivingEntity livingEntity) {
-		livingEntity.addEffect(new MobEffectInstance(Effects.FRESH_BANDAGE.getHolder().orElseThrow(), 800));
-	}
-
-	private static boolean isNotFullHealth(LivingEntity livingEntity) {
-		return livingEntity.getHealth() < livingEntity.getMaxHealth();
+        livingEntity.addEffect(new MobEffectInstance(Effects.FRESH_BANDAGE.getHolder().orElseThrow(), 800));
     }
 
-    private final int itemUseDuration;
+    private final String name;
 
-	private final boolean healing;
+    private final int itemUseDuration;
 
     private final Predicate<LivingEntity> canUseItem;
 
     private final Consumer<LivingEntity> applyEffect;
 
-	private final List<Holder<MobEffect>> removingEffects;
+    private final List<Holder<MobEffect>> removingEffects;
 
-    BandageTypes(int itemUseDuration,
-			boolean healing,
+    BandageTypes(String name,
+            int itemUseDuration,
             Predicate<LivingEntity> canUseItem,
             Consumer<LivingEntity> applyEffect,
-			List<Holder<MobEffect>> removingEffects) {
+            List<Holder<MobEffect>> removingEffects) {
+        this.name = name;
         this.itemUseDuration = itemUseDuration;
-		this.healing = healing;
         this.canUseItem = canUseItem;
         this.applyEffect = applyEffect;
         this.removingEffects = removingEffects;
     }
 
-	BandageTypes(int itemUseDuration, List<Holder<MobEffect>> removingEffects) {
-		this(itemUseDuration, false, livingEntity -> removingEffects.stream().anyMatch(livingEntity::hasEffect),
-				livingEntity -> {
-				}, removingEffects);
+    BandageTypes(String name,
+            int itemUseDuration,
+            Consumer<LivingEntity> applyEffect,
+            List<Holder<MobEffect>> removingEffects) {
+        this(name,
+                itemUseDuration,
+                livingEntity -> removingEffects.stream().anyMatch(livingEntity::hasEffect),
+                applyEffect,
+                removingEffects);
     }
 
-    BandageTypes(int itemUseDuration,
-			Consumer<LivingEntity> applyEffect, List<Holder<MobEffect>> removingEffects) {
-		this(itemUseDuration, false, livingEntity -> removingEffects.stream().anyMatch(livingEntity::hasEffect),
-				applyEffect, removingEffects);
+    BandageTypes(String name, int itemUseDuration, List<Holder<MobEffect>> removingEffects) {
+        this(name, itemUseDuration, livingEntity -> {
+        }, removingEffects);
     }
 
     @Override
@@ -100,18 +86,13 @@ public enum BandageTypes implements BandageType {
     }
 
     @Override
-	public List<Holder<MobEffect>> getRemovingEffects() {
+    public List<Holder<MobEffect>> getRemovingEffects() {
         return removingEffects;
     }
 
-	@Override
-	public String getName() {
-		return name().toLowerCase();
-	}
-
-	@Override
-	public boolean isHealing() {
-		return healing;
-	}
+    @Override
+    public String getName() {
+        return name;
+    }
 
 }
